Add java.base/sun.security.action required for Lincheck to run on Java 17 (#3908)