@@ -323,7 +323,9 @@ task jvmLincheckTestAdditional(type: Test, dependsOn: compileTestKotlinJvm) {
 static void configureJvmForLincheck(task, additional = false) {
     task.minHeapSize = '1g'
     task.maxHeapSize = '4g' // we may need more space for building an interleaving tree in the model checking mode
+    // https://github.com/JetBrains/lincheck#java-9
     task.jvmArgs = ['--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',   // required for transformation
+                    '--add-exports', 'java.base/sun.security.action=ALL-UNNAMED',
                     '--add-exports', 'java.base/jdk.internal.util=ALL-UNNAMED'] // in the model checking mode
     // Adjust internal algorithmic parameters to increase the testing quality instead of performance.
     var segmentSize = additional ? '2' : '1'
